--- a/FrontBasic/html-input.html
+++ b/FrontBasic/html-input.html
@@ -16,11 +16,66 @@
     <input type="text" size="5" maxLength="3" value="1234" />
     <input type="password" />
     <br />
-    
+
     <!-- search, url, email, tel type -->
-    <input type="search" />
-    <input type="url" />
-    <input type="email" />
-    <input type="tel" />
+    <form>
+        <input type="search" />
+        <input type="url" />
+        <input type="email" />
+        <input type="tel" />
+        <button type="submit">submit</button>
+    </form>
+
+    <!--# checkbox, radio type -->
+    <!-- checkbox: 0개 이상 선택할 때 사용 -->
+    <!-- radio: 1개만 선택할 때 사용 -->
+
+    <!-- value: checkbox나 radio의 값을 지정 -->
+    <!-- name: form 제출 시 해당 name으로 value를 전송 -->
+    <!--       name으로 그룹화 -->
+    <!-- checked: 기본적으로 선택되는 값 -->
+
+    <!-- Select -->
+    <!-- 주어진 옵션 중에서 특정한 하나 혹은 그 이상을 선택 -->
+    <!-- option 요소로 선택할 수 있는 옵션을 지정 -->
+    <!-- optgroup 요소로 option 요소들을 그룹화 -->
+
+    <!-- select 요소에 작성 -->
+    <!-- name: form 제출시 해당 name으로 value를 전송 -->
+    <!-- multiple: 해당 select를 여러개의 option 선택 가능하게 함-->
+    <!-- size: 한번에 보여지는 option의 수를 지정 -->
+
+    <!-- option 요소에 작성 -->
+    <!-- value: option의 값을 지정 -->
+    <!-- selected: 해당 option을 선택된 상태로 지정 -->
+    <!-- disabled: 해당 option을 선택하지 못하는 상태로 지정 -->
+    <form>
+        <fieldset>
+            <legend>Checkbox</legend>
+            <input type="checkbox" name="check_group" value="1" checked/><label>1</label>
+            <input type="checkbox" name="check_group" value="2" checked/><label>2</label>
+            <input type="checkbox" name="check_group" value="3" checked/><label>3</label>
+        </fieldset>
+        <fieldset>
+            <legend>Radio</legend>
+            <input type="radio" name="radio_group" value="1" checked/><label>1</label>
+            <input type="radio" name="radio_group" value="2" /><label>2</label>
+            <input type="radio" name="radio_group" value="3" /><label>3</label>
+        </fieldset>
+        <fieldset>
+            <legend>Select</legend>
+            <select name="foods" multiple size="2">
+                <optgroup label="과일">
+                    <option value="apple">사과</option>
+                    <option value="banana" selected>바나나</option>
+                </optgroup>
+                <optgroup label="기타 음식">
+                    <option value="carrot">당근</option>
+                    <option value="donut" disabled>도넛</option>
+                </optgroup>
+            </select>
+        </fieldset>
+        <button type="submit">제출</button>
+    </form>
 </body>
 </html>
