--- a/NAVER-SIGN-IN/html+css-naver-sign-in.html
+++ b/NAVER-SIGN-IN/html+css-naver-sign-in.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>네이버 : 로그인</title>
     <link rel="stylesheet" href="./naver-sign-in.css" /> 
+    <script>
+        const onSubmitHandler = () => {
+            const id = document.getElementById("id").value;
+            if(!id.trim()){
+                document.getElementById('sign-in-error').style.display = 'block';
+                return;
+            }
+            document.getElementById('sign-in-error').style.display = 'none';
+            const form = document.getElementById('form');
+            form.submit();
+        }
+    </script>
 </head>
 <body>
     <!-- Header -->
@@ -29,7 +41,7 @@
         <div class="content">
             <!-- 로그인 wrapper -->
             <div class="sign-in-wrapper">
-                <form action="https://nid.naver.com/nidlogin.login" method="POST">
+                <form id="form" action="https://nid.naver.com/nidlogin.login" method="POST">
                     <ul class="panel-wrapper">
                         <li class="panel-item">
                             <div class="panel-inner">
@@ -60,9 +72,15 @@
                                     </div>
                                     <div class="ip-check"></div>
                                 </div>
-                                <!--* Sign In Button wrapper -->
+                                <!-- Sign In Error -->
+                                <div id="sign-in-error" class="sign-in-error" style="display: none">
+                                    <div class="error-message">
+                                        <strong>아이디</strong>를 입력하세요
+                                    </div>
+                                </div>
+                                <!-- Sign In Button wrapper -->
                                 <div class="sigin-in-button-wrapper">
-                                    <button type="submit" class="sign-in-button">
+                                    <button type="button" class="sign-in-button" onClick="onSubmitHandler();">
                                         <span class="button-text">로그인</span>
                                     </button>
                                 </div>
